2008-05-29 P.G. Richardson <phantom_sf at users.sourceforge.net>

  * src/display_photo.c

    Fix for pixbufs not being unreference in display_photo.c
    
2008-05-24 Jorg Schuler <jcsjcs at users.sourceforge.net>

	* src/file.c (video_thumbnail_setup_cache): fixed compiler warning
	  and possible memory leak.

	* src/file.c (create_video_thumbnail): fixed possible memory leak.

2008-05-22 Jorg Schuler <jcsjcs at users.sourceforge.net>

	* src/confirmation.c (gtkpod_confirmation): switch wrapping on for
	  displayed text.

2008-05-17 Jorg Schuler <jcsjcs at users.sourceforge.net>

	* src/mp3file.c (mp3_read_gapless):
	  - added assertion for track->userdata
	  - remove gapless data if file does not contain gapless data.

	* src/file_convert.c: read gapless data after conversion to MP3
	  files.
	
2008-05-11 Jorg Schuler <jcsjcs at users.sourceforge.net>

	* src/misc_playlist.c: don't allow adding of playlists if iPod is
	  not loaded. Thanks to Andrea.

	* src/fileselection.c: use gtkpod_warning_simple() instead of
	  error_dialog() -- reducing code. Thanks to Andrea.

2008-05-05 Jorg Schuler <jcsjcs at users.sourceforge.net>

	* data/gtkpod.glade: added lost handler to "create new
	playlist". Thanks to Andrea.

2008-05-01  Todd Zullinger <tmzullinger at users.sourceforge.net>

	* INSTALL
	  configure.in:
	  Require libgpod >= 0.6.1

2008-04-19 Jorg Schuler <jcsjcs at users.sourceforge.net>

	* src/file_convert (conversion_convert_track): redirect stdout
          of conversion script to /dev/NULL.

	* data/gtkpod.glade (prefs_dialog): get rid of "Only
          'activatable' widgets can be packed into the action area of
          a GtkDialog" warning. Changes layouts of buttons at the
          bottom of the window slightly ("Revert" is now centered
          instead of being grouped on the right together with the
          "Close" button).

	* src/flacfile.c (flac_get_file_info): patch by Peter Pletcher